# databricks-notebook

./: .env.example  Databricks_Notebook.ipynb  README.md  notebook.py  pyproject.toml
__notebook__/: Databricks_Notebook.ipynb  Databricks_Notebook_PEARSON_TEST.ipynb  Snowflake_to_BigQuery.ipynb
databricks_notebook/: __init__.py
